--- a/MouseClick/config.ini
+++ b/MouseClick/config.ini
@@ -21,3 +21,6 @@ EnableRa2Mode = true
 ; 即，只会在建造栏连点，在左边区域框选单位时不受影响 (主要不影响Ctrl Shift Alt等Ra2快捷键的使用)
 ConstructionBarWidth = 230
 
+; 手动设置屏幕宽度, 不设置则会自动获取主屏幕宽度
+; ScreenWidth = 1920
+
