--- a/MouseClick/config.ini
+++ b/MouseClick/config.ini
@@ -1,6 +1,6 @@
 ﻿[core]
 ; 连点次数
-ClickCounts = 10
+ClickCounts = 6
 
 ; 使用Ra2ol风格(指按住热键，然后点击鼠标左键才开始连点)  如果设置为false，则按热键即开始连点
 UseRa2olStyle = true
@@ -12,6 +12,12 @@ HotKeyCode = 160
 ; 点击间隔(毫秒)
 ClickInterval = 10
 
+TextEditor = notepad.exe
+
+Author = lenchu
+
+Email = 553308706@qq.com
+
 
 [ra2]
 ; 开始Ra2模式
@@ -19,7 +25,7 @@ EnableRa2Mode = true
 
 ; 建造栏宽度 (开始Ra2模式时，只有当鼠标位于屏幕右侧ConstructionBarWidth宽度范围内时，才会触发连点)
 ; 即，只会在建造栏连点，在左边区域框选单位时不受影响 (主要不影响Ctrl Shift Alt等Ra2快捷键的使用)
-ConstructionBarWidth = 230
+ConstructionBarWidth = 160
 
 ; 手动设置屏幕宽度, 不设置则会自动获取主屏幕宽度
 ; ScreenWidth = 1920
