--- a/MouseClick/config.ini
+++ b/MouseClick/config.ini
@@ -30,3 +30,13 @@ ConstructionBarWidth = 160
 ; 手动设置屏幕宽度, 不设置则会自动获取主屏幕宽度
 ; ScreenWidth = 1920
 
+
+; 开始自动探测模式
+AutoDetectMode = true
+
+; 游戏进程文件名，每行一个进程名，用于自定义自动探测模式
+GameProcessFileName = game-processes.txt
+
+; 自动探测间隔(毫秒)
+AutoDetectInterval = 5000
+
