TeamControl按键映射改用配置文件映射按键

--- a/MouseClick/MouseClick.csproj
+++ b/MouseClick/MouseClick.csproj
@@ -104,6 +104,9 @@
     <Content Include="game-processes.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="plugins\KeyMappings.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
