右键连点开关 去掉窗口标题的 by lenchu

--- a/MouseClick/config.ini
+++ b/MouseClick/config.ini
@@ -2,7 +2,7 @@
 ; 连点次数
 ClickCounts = 6
 
-; 使用Ra2ol风格(指按住热键，然后点击鼠标左键才开始连点)  如果设置为false，则按热键即开始连点
+; 使用Ra2ol风格(指按住热键，然后点击鼠标左(右)键才开始连点)  如果设置为false，则按热键即开始连点(左键)
 UseRa2olStyle = true
 
 ; 热键的Code 左Shift=160 左Control=162 左Alt=164
@@ -12,6 +12,12 @@ HotKeyCode = 160
 ; 点击间隔(毫秒)
 ClickInterval = 10
 
+; 左键连点开关
+LeftClick = true
+
+; 右键连点开关
+RightClick = false
+
 TextEditor = notepad.exe
 
 Author = lenchu
@@ -20,10 +26,10 @@ Email = 553308706@qq.com
 
 
 [ra2]
-; 开始Ra2模式
+; 开启Ra2模式
 EnableRa2Mode = true
 
-; 建造栏宽度 (开始Ra2模式时，只有当鼠标位于屏幕右侧ConstructionBarWidth宽度范围内时，才会触发连点)
+; 建造栏宽度 (开启Ra2模式时，只有当鼠标位于屏幕右侧ConstructionBarWidth宽度范围内时，才会触发连点)
 ; 即，只会在建造栏连点，在左边区域框选单位时不受影响 (主要不影响Ctrl Shift Alt等Ra2快捷键的使用)
 ConstructionBarWidth = 160
 
@@ -31,7 +37,7 @@ ConstructionBarWidth = 160
 ; ScreenWidth = 1920
 
 
-; 开始自动探测模式
+; 自动探测模式开关
 AutoDetectMode = true
 
 ; 游戏进程文件名，每行一个进程名，用于自定义自动探测模式
