--- a/MouseClick/MouseClick.csproj
+++ b/MouseClick/MouseClick.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Form1_init.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="NotifyingEntity.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
