--- a/MouseClick/packages.config
+++ b/MouseClick/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.12" targetFramework="net462" />
+  <package id="MaterialSkin.2" version="2.3.1" targetFramework="net462" />
   <package id="MouseKeyHook" version="5.6.0" targetFramework="net462" />
 </packages>
