自动检测游戏进程配置

--- a/MouseClick/config.ini
+++ b/MouseClick/config.ini
@@ -42,6 +42,11 @@ AutoDetectMode = true
 ; 游戏进程文件名，每行一个进程名，用于自定义自动探测模式
 GameProcessFileName = game-processes.txt
 
+; 自动探测游戏进程配置，与 GameProcessFileName 中的配置同时生效
+; 进程名首尾带有空格的，请使用 GameProcessFileName 进行配置
+GameProcessSeparator = |
+GameProcessList = gamemd | game | gameares | gamemd-spawn
+
 ; 自动探测间隔(毫秒)
 AutoDetectInterval = 5000
 
