新战网ares进程探测

--- a/MouseClick/config.ini
+++ b/MouseClick/config.ini
@@ -45,7 +45,7 @@ GameProcessFileName = game-processes.txt
 ; 自动探测游戏进程配置，与 GameProcessFileName 中的配置同时生效
 ; 进程名首尾带有空格的，请使用 GameProcessFileName 进行配置
 GameProcessSeparator = |
-GameProcessList = gamemd | game | gameares | gamemd-spawn
+GameProcessList = gamemd | game | gameares | gamemd-spawn | gamemd-ares
 
 ; 自动探测间隔(毫秒)
 AutoDetectInterval = 5000
