--- a/MouseClick/App.config
+++ b/MouseClick/App.config
@@ -1,25 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
-		<section name="log4net"	type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
 	</configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
 
 	<log4net>
 		<root>
-			<level value="WARN" />
-			<appender-ref ref="LogFileAppender" />
-			<appender-ref ref="ConsoleAppender" />
+			<level value="WARN"/>
+			<appender-ref ref="LogFileAppender"/>
+			<appender-ref ref="ConsoleAppender"/>
 		</root>
 		<logger name="MC.INFO">
 			<level value="INFO"/>
@@ -27,22 +27,22 @@
 		<logger name="MC.DEBUG">
 			<level value="DEBUG"/>
 		</logger>
-		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender" >
-			<param name="File" value="./log/" />
-			<param name="AppendToFile" value="true" />
-			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-			<Encoding value="UTF-8" />
-			<param name="MaxSizeRollBackups" value="60" />
-			<param name="StaticLogFileName" value="false" />
-			<param name="RollingStyle" value="Date" />
-			<param name="DatePattern" value="yyyy-MM-dd.\tx\t"  />
+		<appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="./log/"/>
+			<param name="AppendToFile" value="true"/>
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock"/>
+			<Encoding value="UTF-8"/>
+			<param name="MaxSizeRollBackups" value="60"/>
+			<param name="StaticLogFileName" value="false"/>
+			<param name="RollingStyle" value="Date"/>
+			<param name="DatePattern" value="yyyy-MM-dd.\tx\t"/>
 			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="%d [%t] %-5p %c  - %m%n" />
+				<param name="ConversionPattern" value="%d [%t] %-5p %c  - %m%n"/>
 			</layout>
 		</appender>
-		<appender name="ConsoleAppender"  type="log4net.Appender.ConsoleAppender" >
+		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern"  value="%d [%t] %-5p %c [%x] - %m%n" />
+				<param name="ConversionPattern" value="%d [%t] %-5p %c [%x] - %m%n"/>
 			</layout>
 		</appender>
 	</log4net>
